syntax = "proto3";

package genid;

option go_package = "./pb";

message GetIdReq{}

message GetIdResp{
  uint64 Id = 1;
}

service GenId{
  rpc GetId(GetIdReq) returns(GetIdResp);
}